--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "pydantic>=2.6",
   "pydantic-settings>=2.2",
   "qdrant-client>=1.7",
+  "PyMuPDF>=1.24",
 ]
 
 [project.scripts]
