--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "pydantic-settings>=2.2",
   "qdrant-client>=1.7",
   "PyMuPDF>=1.24",
+  "openai>=1.30",
 ]
 
 [project.scripts]
