--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "qdrant-client>=1.7",
   "PyMuPDF>=1.24",
   "openai>=1.30",
+  "google-generativeai>=0.7",
 ]
 
 [project.scripts]
