--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "openai>=1.30",
   "google-generativeai>=0.7",
   "pymysql>=1.1",
+  "sqlalchemy>=2.0",
 ]
 
 [project.scripts]
