--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
   "PyMuPDF>=1.24",
   "openai>=1.30",
   "google-generativeai>=0.7",
-  "pymysql>=1.1",
+  "mariadb>=1.1",
   "sqlalchemy>=2.0",
 ]
 
