--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -11,9 +11,10 @@ dependencies = [
   "qdrant-client>=1.7",
   "PyMuPDF>=1.24",
   "openai>=1.30",
-  "google-generativeai>=0.7",
+  "google-genai>=0.3",
   "mariadb>=1.1",
   "sqlalchemy>=2.0",
+  "python-multipart>=0.0.9",
 ]
 
 [project.scripts]
