--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "mariadb>=1.1",
   "sqlalchemy>=2.0",
   "python-multipart>=0.0.9",
+  "fastapi-pagination>=0.12",
 ]
 
 [project.scripts]
